# vesuviusfullsolve

./: README.md  chord.py  main.py  metrics.py  patch.py  path.py  pipeline.py  render.py  requirements.txt  script.sh  snic.py  supervoxeler.py  vis.py  volume.py
c/: CMakeLists.txt  chord.c  chord.h  common.h  snic.c  snic.h  snic_test.c  supervoxeler.c
scripts/: dl_zarrs.py  example.py  viewer2d.py
useful/: scroll1a_2_umbilicus.txt  scroll1b_0_umbilicus.csv  scroll1b_2_umbilicus.txt  scroll_1a_3_bordertrace.txt  scroll_1a_3_bordertrace2.txt  scroll_umbilicus.py
